--- a/home.html
+++ b/home.html
@@ -4,20 +4,35 @@
         <link rel="stylesheet" href="style.css"> 
     </head>
     <body>
+        <div class="header">
+        <h2><i>VYSHNAVI S VARIYAR</i></h2>
+        </div>
+
+        <div class="para">
+            <p></p>
+
+        </div>
+
         <div class="container">
             <div class="one">
-                <h1>Achievements</h1>
-            </div>
-            <div class="two">
-                <h1>Projects</h1>
-            </div>
-            <div class="three">
-                <h1>Skills</h1>
-            </div>
-            <div class="three">
-                <h1>Certifications</h1>
+                <a href="achievements.html">Achievements</a>
+                <p>10</p>
             </div>
 
+            <div class="two">
+                <a href="projects.html">Projects</a>
+                <p>5</p>
+            </div>
+
+            <div class="three">
+                <a href="skills.html">Skills</a>
+                <p>7</p>
+            </div>
+
+            <div class="four">
+                <a href="certifications.html">Certifications</a>
+                <p>6</p>
+            </div>
         </div>
     </body>
 </html>
